tests/snapshots/snapshots__budget_semver_internal_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (485 tokens)

constants.js
     5→const SEMVER_SPEC_VERSION = '2.0.0'
     7→const MAX_LENGTH = 256
     8→const MAX_SAFE_INTEGER = Number.MAX_SAFE_INTEGER ||
    12→const MAX_SAFE_COMPONENT_LENGTH = 16
    16→const MAX_SAFE_BUILD_LENGTH = MAX_LENGTH - 6
    18→const RELEASE_TYPES = [

debug.js
     3→const debug = (

identifiers.js
     3→const numeric = /^[0-9]+$/
     4→const compareIdentifiers = (a, b) => {
    24→const rcompareIdentifiers = (a, b) => compareIdentifiers(b, a)

lrucache.js
     3→class LRUCache {
     4→  constructor () {
     5→    this.max = 1000
     6→    this.map = new Map()
     7→  }
     9→  get (key) {
    10→    const value = this.map.get(key)
    11→    if (value === undefined) {
    12→      return undefined
      →…
    21→  delete (key) {
    22→    return this.map.delete(key)
    23→  }
    25→  set (key, value) {
    26→    const deleted = this.delete(key)
    27→
    28→    if (!deleted && value !== undefined) {
      →…

parse-options.js
     4→const looseOption = Object.freeze({ loose: true })
     5→const emptyOpts = Object.freeze({ })
     6→const parseOptions = options => {

re.js
    12→const re = exports.re = []
    13→const safeRe = exports.safeRe = []
    14→const src = exports.src = []
    15→const safeSrc = exports.safeSrc = []
    16→const t = exports.t = {}
    19→const LETTERDASHNUMBER = '[a-zA-Z0-9-]'
    27→const safeRegexReplacements = [
    33→const makeSafeRegex = (value) => {
    42→const createToken = (name, value, isGlobal) => {
