tests/snapshots/snapshots__budget_semver_internal_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 8 → level 0 (6 words)

constants.js
debug.js
identifiers.js
lrucache.js
parse-options.js
re.js
