tests/snapshots/snapshots__budget_semver_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (4 words)

comparator.js
index.js
range.js
semver.js
