tests/snapshots/snapshots__budget_semver_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 60 → level 0 (57 words)

.commitlintrc.js
.eslintrc.js
.eslintrc.local.js
CHANGELOG.md
CODE_OF_CONDUCT.md
CONTRIBUTING.md
README.md
SECURITY.md
bin/semver.js
classes/comparator.js
classes/index.js
classes/range.js
classes/semver.js
functions/clean.js
functions/cmp.js
functions/coerce.js
functions/compare-build.js
functions/compare-loose.js
functions/compare.js
functions/diff.js
functions/eq.js
functions/gt.js
functions/gte.js
functions/inc.js
functions/lt.js
functions/lte.js
functions/major.js
functions/minor.js
functions/neq.js
functions/parse.js
functions/patch.js
functions/prerelease.js
functions/rcompare.js
functions/rsort.js
functions/satisfies.js
functions/sort.js
functions/valid.js
index.js
internal/constants.js
internal/debug.js
internal/identifiers.js
internal/lrucache.js
internal/parse-options.js
internal/re.js
map.js
preload.js
ranges/gtr.js
ranges/intersects.js
ranges/ltr.js
ranges/max-satisfying.js
ranges/min-satisfying.js
ranges/min-version.js
ranges/outside.js
ranges/simplify.js
ranges/subset.js
ranges/to-comparators.js
ranges/valid.js
