tests/snapshots/snapshots__budget_semver_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 700 → level 2 (649 words)

.commitlintrc.js
.eslintrc.js
     7→const localConfigs
.eslintrc.local.js
CHANGELOG.md
     1→# Changelog
     3→## [7.7.4](https://github.com/npm/node-semver/compare/v7.7.3...v7.7.4) (2026-01-16)
     4→### Bug Fixes
     6→### Documentation
     8→### Dependencies
    10→### Chores
    15→## [7.7.3](https://github.com/npm/node-semver/compare/v7.7.2...v7.7.3) (2025-10-06)
    16→### Bug Fixes
    19→### Chores
    22→## [7.7.2](https://github.com/npm/node-semver/compare/v7.7.1...v7.7.2) (2025-05-12)
    23→### Bug Fixes
    26→### Chores
    30→## [7.7.1](https://github.com/npm/node-semver/compare/v7.7.0...v7.7.1) (2025-02-03)
    31→### Bug Fixes
    34→## [7.7.0](https://github.com/npm/node-semver/compare/v7.6.3...v7.7.0) (2025-01-29)
    35→### Features
    37→### Bug Fixes
    40→### Documentation
    43→### Chores
    48→## [7.6.3](https://github.com/npm/node-semver/compare/v7.6.2...v7.6.3) (2024-07-16)
    50→### Bug Fixes
    54→### Documentation
    58→## [7.6.2](https://github.com/npm/node-semver/compare/v7.6.1...v7.6.2) (2024-05-09)
    60→### Bug Fixes
    64→## [7.6.1](https://github.com/npm/node-semver/compare/v7.6.0...v7.6.1) (2024-05-04)
    66→### Bug Fixes
    72→### Dependencies
    77→### Chores
    86→## [7.6.0](https://github.com/npm/node-semver/compare/v7.5.4...v7.6.0) (2024-01-31)
    88→### Features
    92→### Chores
   108→## [7.5.4](https://github.com/npm/node-semver/compare/v7.5.3...v7.5.4) (2023-07-07)
   110→### Bug Fixes
   115→## [7.5.3](https://github.com/npm/node-semver/compare/v7.5.2...v7.5.3) (2023-06-22)
   117→### Bug Fixes
   121→### Documentation
   125→## [7.5.2](https://github.com/npm/node-semver/compare/v7.5.1...v7.5.2) (2023-06-15)
   127→### Bug Fixes
   133→## [7.5.1](https://github.com/npm/node-semver/compare/v7.5.0...v7.5.1) (2023-05-12)
   135→### Bug Fixes
   139→## [7.5.0](https://github.com/npm/node-semver/compare/v7.4.0...v7.5.0) (2023-04-17)
   141→### Features
   145→### Bug Fixes
   151→## [7.4.0](https://github.com/npm/node-semver/compare/v7.3.8...v7.4.0) (2023-04-10)
   153→### Features
   158→### Bug Fixes
   168→### Documentation
   172→## [7.3.8](https://github.com/npm/node-semver/compare/v7.3.7...v7.3.8) (2022-10-04)
   174→### Bug Fixes
   178→### Documentation
   182→### [7.3.7](https://github.com/npm/node-semver/compare/v7.3.6...v7.3.7) (2022-04-11)
   185→### Bug Fixes
   193→### Dependencies
   197→### [7.3.6](https://github.com/npm/node-semver/compare/v7.3.5...v7.3.6) (2022-04-05)
   200→### Bug Fixes
   208→### Documentation
   213→### Dependencies
   218→## 7.3.0
   223→## 7.2.3
   228→## 7.2.2
   233→## 7.2.0
   239→## 7.1.2
   244→## 7.1.0
   249→## 7.0.0
   255→## 6.3.0
   259→## 6.2.0
   264→## 6.1.3
   268→## 6.1.2
   272→## 6.1.1
   277→## 6.1.0
   282→## 6.0
   290→## 5.7
   294→## 5.6
   301→## 5.5
   305→## 5.4
   309→## 5.3
   313→## 5.2
   317→## 5.1
   322→## 5.0
CODE_OF_CONDUCT.md
CONTRIBUTING.md
     3→# Contributing
     5→## Code of Conduct
     9→## Reporting Bugs
    17→## Pull Request Conventions
    19→### Commits
    30→### Test Coverage
    36→### Linting
    42→## What _not_ to contribute?
    44→### Dependencies
    48→### Tools/Automation
README.md
     1→semver(1) -- The semantic versioner for npm
     4→## Install
    10→## Usage
   139→## Versions
   148→## Ranges
   184→### Prerelease Tags
   219→#### Prerelease Identifiers
   250→#### Prerelease Identifier Base
   279→### Advanced Range Syntax
   287→#### Hyphen Ranges `X.Y.Z - A.B.C`
   306→#### X-Ranges `1.2.x` `1.X` `1.2.*` `*`
   324→#### Tilde Ranges `~1.2.3` `~1.2` `~1`
   341→#### Caret Ranges `^1.2.3` `^0.2.5` `^0.0.4`
   384→### Range Grammar
   408→## Functions
   453→### Comparison
   478→### Sorting
   485→### Comparators
   489→### Ranges
   531→### Coercion
   558→### Clean
   576→## Constants
   580→### `RELEASE_TYPES`
   600→### `SEMVER_SPEC_VERSION`
   610→## Exported Modules
SECURITY.md
bin/semver.js
     8→const argv
    12→const range
    37→const main
   132→const failInc
   137→const fail
   139→const help
classes/comparator.js
     3→const ANY
     5→class Comparator
     6→  static get ANY () {
    10→  constructor (comp, options) {
    36→  parse (comp) {
    57→  toString () {
    61→  test (version) {
    79→  intersects (comp, options) {
classes/index.js
classes/range.js
     3→const SPACE_CHARACTERS
     6→class Range
     7→  constructor (range, options) {
    73→  get range () {
    92→  format () {
    96→  toString () {
   100→  parseRange (range) {
   170→  intersects (range, options) {
   193→  test (version) {
   218→const cache
   233→const isNullSet
   234→const isAny
   238→const isSatisfiable
   257→const parseComparator
   271→const isX
   280→const replaceTildes
   288→const replaceTilde
   324→const replaceCarets
   332→const replaceCaret
   385→const replaceXRanges
   393→const replaceXRange
   470→const replaceStars
   478→const replaceGTE0
   491→const hyphenReplace
   523→const testSet
classes/semver.js
     9→class SemVer
    10→  constructor (version, options) {
    81→  format () {
    89→  toString () {
    93→  compare (other) {
   109→  compareMain (other) {
   135→  comparePre (other) {
   168→  compareBuild (other) {
   194→  inc (release, identifier, identifierBase) {
functions/clean.js
     4→const clean
functions/cmp.js
    10→const cmp
functions/coerce.js
     7→const coerce
functions/compare-build.js
     4→const compareBuild
functions/compare-loose.js
     4→const compareLoose
functions/compare.js
     4→const compare
functions/diff.js
     5→const diff
functions/eq.js
     4→const eq
functions/gt.js
     4→const gt
functions/gte.js
     4→const gte
functions/inc.js
     5→const inc
functions/lt.js
     4→const lt
functions/lte.js
     4→const lte
functions/major.js
     4→const major
functions/minor.js
     4→const minor
functions/neq.js
     4→const neq
functions/parse.js
     4→const parse
functions/patch.js
     4→const patch
functions/prerelease.js
     4→const prerelease
functions/rcompare.js
     4→const rcompare
functions/rsort.js
     4→const rsort
functions/satisfies.js
     4→const satisfies
functions/sort.js
     4→const sort
functions/valid.js
     4→const valid
index.js
internal/constants.js
     5→const SEMVER_SPEC_VERSION
     7→const MAX_LENGTH
     8→const MAX_SAFE_INTEGER
    12→const MAX_SAFE_COMPONENT_LENGTH
    16→const MAX_SAFE_BUILD_LENGTH
    18→const RELEASE_TYPES
internal/debug.js
     3→const debug
internal/identifiers.js
     3→const numeric
     4→const compareIdentifiers
    24→const rcompareIdentifiers
internal/lrucache.js
     3→class LRUCache
     4→  constructor () {
     9→  get (key) {
    21→  delete (key) {
    25→  set (key, value) {
internal/parse-options.js
     4→const looseOption
     5→const emptyOpts
     6→const parseOptions
internal/re.js
    12→const re
    13→const safeRe
    14→const src
    15→const safeSrc
    16→const t
    19→const LETTERDASHNUMBER
    27→const safeRegexReplacements
    33→const makeSafeRegex
    42→const createToken
map.js
preload.js
ranges/gtr.js
     5→const gtr
ranges/intersects.js
     4→const intersects
ranges/ltr.js
     5→const ltr
ranges/max-satisfying.js
     6→const maxSatisfying
ranges/min-satisfying.js
     5→const minSatisfying
ranges/min-version.js
     7→const minVersion
ranges/outside.js
    13→const outside
ranges/simplify.js
ranges/subset.js
    45→const subset
    73→const minimumVersionWithPreRelease
    74→const minimumVersion
    76→const simpleSubset
   226→const higherGT
   238→const lowerLT
ranges/to-comparators.js
     6→const toComparators
ranges/valid.js
     4→const validRange
