tests/snapshots/snapshots__budget_semver_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 → level 2 (1128 words)

.commitlintrc.js
.eslintrc.js
     7→const localConfigs = readdir(__dirname)
.eslintrc.local.js
CHANGELOG.md
     1→# Changelog
     3→## [7.7.4](https://github.com/npm/node-semver/compare/v7.7.3...v7.7.4) (2026-01-16)
     4→### Bug Fixes
     6→### Documentation
     8→### Dependencies
    10→### Chores
    15→## [7.7.3](https://github.com/npm/node-semver/compare/v7.7.2...v7.7.3) (2025-10-06)
    16→### Bug Fixes
    19→### Chores
    22→## [7.7.2](https://github.com/npm/node-semver/compare/v7.7.1...v7.7.2) (2025-05-12)
    23→### Bug Fixes
    26→### Chores
    30→## [7.7.1](https://github.com/npm/node-semver/compare/v7.7.0...v7.7.1) (2025-02-03)
    31→### Bug Fixes
    34→## [7.7.0](https://github.com/npm/node-semver/compare/v7.6.3...v7.7.0) (2025-01-29)
    35→### Features
    37→### Bug Fixes
    40→### Documentation
    43→### Chores
    48→## [7.6.3](https://github.com/npm/node-semver/compare/v7.6.2...v7.6.3) (2024-07-16)
    50→### Bug Fixes
    54→### Documentation
    58→## [7.6.2](https://github.com/npm/node-semver/compare/v7.6.1...v7.6.2) (2024-05-09)
    60→### Bug Fixes
    64→## [7.6.1](https://github.com/npm/node-semver/compare/v7.6.0...v7.6.1) (2024-05-04)
    66→### Bug Fixes
    72→### Dependencies
    77→### Chores
    86→## [7.6.0](https://github.com/npm/node-semver/compare/v7.5.4...v7.6.0) (2024-01-31)
    88→### Features
    92→### Chores
   108→## [7.5.4](https://github.com/npm/node-semver/compare/v7.5.3...v7.5.4) (2023-07-07)
   110→### Bug Fixes
   115→## [7.5.3](https://github.com/npm/node-semver/compare/v7.5.2...v7.5.3) (2023-06-22)
   117→### Bug Fixes
   121→### Documentation
   125→## [7.5.2](https://github.com/npm/node-semver/compare/v7.5.1...v7.5.2) (2023-06-15)
   127→### Bug Fixes
   133→## [7.5.1](https://github.com/npm/node-semver/compare/v7.5.0...v7.5.1) (2023-05-12)
   135→### Bug Fixes
   139→## [7.5.0](https://github.com/npm/node-semver/compare/v7.4.0...v7.5.0) (2023-04-17)
   141→### Features
   145→### Bug Fixes
   151→## [7.4.0](https://github.com/npm/node-semver/compare/v7.3.8...v7.4.0) (2023-04-10)
   153→### Features
   158→### Bug Fixes
   168→### Documentation
   172→## [7.3.8](https://github.com/npm/node-semver/compare/v7.3.7...v7.3.8) (2022-10-04)
   174→### Bug Fixes
   178→### Documentation
   182→### [7.3.7](https://github.com/npm/node-semver/compare/v7.3.6...v7.3.7) (2022-04-11)
   185→### Bug Fixes
   193→### Dependencies
   197→### [7.3.6](https://github.com/npm/node-semver/compare/v7.3.5...v7.3.6) (2022-04-05)
   200→### Bug Fixes
   208→### Documentation
   213→### Dependencies
   218→## 7.3.0
   223→## 7.2.3
   228→## 7.2.2
   233→## 7.2.0
   239→## 7.1.2
   244→## 7.1.0
   249→## 7.0.0
   255→## 6.3.0
   259→## 6.2.0
   264→## 6.1.3
   268→## 6.1.2
   272→## 6.1.1
   277→## 6.1.0
   282→## 6.0
   290→## 5.7
   294→## 5.6
   301→## 5.5
   305→## 5.4
   309→## 5.3
   313→## 5.2
   317→## 5.1
   322→## 5.0
CODE_OF_CONDUCT.md
CONTRIBUTING.md
     3→# Contributing
     5→## Code of Conduct
     9→## Reporting Bugs
    17→## Pull Request Conventions
    19→### Commits
    30→### Test Coverage
    36→### Linting
    42→## What _not_ to contribute?
    44→### Dependencies
    48→### Tools/Automation
README.md
     1→semver(1) -- The semantic versioner for npm
     4→## Install
    10→## Usage
   139→## Versions
   148→## Ranges
   184→### Prerelease Tags
   219→#### Prerelease Identifiers
   250→#### Prerelease Identifier Base
   279→### Advanced Range Syntax
   287→#### Hyphen Ranges `X.Y.Z - A.B.C`
   306→#### X-Ranges `1.2.x` `1.X` `1.2.*` `*`
   324→#### Tilde Ranges `~1.2.3` `~1.2` `~1`
   341→#### Caret Ranges `^1.2.3` `^0.2.5` `^0.0.4`
   384→### Range Grammar
   408→## Functions
   453→### Comparison
   478→### Sorting
   485→### Comparators
   489→### Ranges
   531→### Coercion
   558→### Clean
   576→## Constants
   580→### `RELEASE_TYPES`
   600→### `SEMVER_SPEC_VERSION`
   610→## Exported Modules
SECURITY.md
bin/semver.js
     8→const argv = process.argv.slice(2)
    12→const range = []
    37→const main = () => {
   132→const failInc = () => {
   137→const fail = () => process.exit(1)
   139→const help = () => console.log(
classes/comparator.js
     3→const ANY = Symbol('SemVer ANY')
     5→class Comparator {
     6→  static get ANY () {
    10→  constructor (comp, options) {
    36→  parse (comp) {
    57→  toString () {
    61→  test (version) {
    79→  intersects (comp, options) {
classes/index.js
classes/range.js
     3→const SPACE_CHARACTERS = /\s+/g
     6→class Range {
     7→  constructor (range, options) {
    73→  get range () {
    92→  format () {
    96→  toString () {
   100→  parseRange (range) {
   170→  intersects (range, options) {
   193→  test (version) {
   218→const cache = new LRU()
   233→const isNullSet = c => c.value === '<0.0.0-0'
   234→const isAny = c => c.value === ''
   238→const isSatisfiable = (comparators, options) => {
   257→const parseComparator = (comp, options) => {
   271→const isX = id => !id || id.toLowerCase() === 'x' || id === '*'
   280→const replaceTildes = (comp, options) => {
   288→const replaceTilde = (comp, options) => {
   324→const replaceCarets = (comp, options) => {
   332→const replaceCaret = (comp, options) => {
   385→const replaceXRanges = (comp, options) => {
   393→const replaceXRange = (comp, options) => {
   470→const replaceStars = (comp, options) => {
   478→const replaceGTE0 = (comp, options) => {
   491→const hyphenReplace = incPr => ($0,
   492→  from, fM, fm, fp, fpr, fb,
   493→  to, tM, tm, tp, tpr) => {
   523→const testSet = (set, version, options) => {
classes/semver.js
     9→class SemVer {
    10→  constructor (version, options) {
    81→  format () {
    89→  toString () {
    93→  compare (other) {
   109→  compareMain (other) {
   135→  comparePre (other) {
   168→  compareBuild (other) {
   194→  inc (release, identifier, identifierBase) {
functions/clean.js
     4→const clean = (version, options) => {
functions/cmp.js
    10→const cmp = (a, op, b, loose) => {
functions/coerce.js
     7→const coerce = (version, options) => {
functions/compare-build.js
     4→const compareBuild = (a, b, loose) => {
functions/compare-loose.js
     4→const compareLoose = (a, b) => compare(a, b, true)
functions/compare.js
     4→const compare = (a, b, loose) =>
functions/diff.js
     5→const diff = (version1, version2) => {
functions/eq.js
     4→const eq = (a, b, loose) => compare(a, b, loose) === 0
functions/gt.js
     4→const gt = (a, b, loose) => compare(a, b, loose) > 0
functions/gte.js
     4→const gte = (a, b, loose) => compare(a, b, loose) >= 0
functions/inc.js
     5→const inc = (version, release, options, identifier, identifierBase) => {
functions/lt.js
     4→const lt = (a, b, loose) => compare(a, b, loose) < 0
functions/lte.js
     4→const lte = (a, b, loose) => compare(a, b, loose) <= 0
functions/major.js
     4→const major = (a, loose) => new SemVer(a, loose).major
functions/minor.js
     4→const minor = (a, loose) => new SemVer(a, loose).minor
functions/neq.js
     4→const neq = (a, b, loose) => compare(a, b, loose) !== 0
functions/parse.js
     4→const parse = (version, options, throwErrors = false) => {
functions/patch.js
     4→const patch = (a, loose) => new SemVer(a, loose).patch
functions/prerelease.js
     4→const prerelease = (version, options) => {
functions/rcompare.js
     4→const rcompare = (a, b, loose) => compare(b, a, loose)
functions/rsort.js
     4→const rsort = (list, loose) => list.sort((a, b) => compareBuild(b, a, loose))
functions/satisfies.js
     4→const satisfies = (version, range, options) => {
functions/sort.js
     4→const sort = (list, loose) => list.sort((a, b) => compareBuild(a, b, loose))
functions/valid.js
     4→const valid = (version, options) => {
index.js
internal/constants.js
     5→const SEMVER_SPEC_VERSION = '2.0.0'
     7→const MAX_LENGTH = 256
     8→const MAX_SAFE_INTEGER = Number.MAX_SAFE_INTEGER ||
    12→const MAX_SAFE_COMPONENT_LENGTH = 16
    16→const MAX_SAFE_BUILD_LENGTH = MAX_LENGTH - 6
    18→const RELEASE_TYPES = [
internal/debug.js
     3→const debug = (
internal/identifiers.js
     3→const numeric = /^[0-9]+$/
     4→const compareIdentifiers = (a, b) => {
    24→const rcompareIdentifiers = (a, b) => compareIdentifiers(b, a)
internal/lrucache.js
     3→class LRUCache {
     4→  constructor () {
     9→  get (key) {
    21→  delete (key) {
    25→  set (key, value) {
internal/parse-options.js
     4→const looseOption = Object.freeze({ loose: true })
     5→const emptyOpts = Object.freeze({ })
     6→const parseOptions = options => {
internal/re.js
    12→const re = exports.re = []
    13→const safeRe = exports.safeRe = []
    14→const src = exports.src = []
    15→const safeSrc = exports.safeSrc = []
    16→const t = exports.t = {}
    19→const LETTERDASHNUMBER = '[a-zA-Z0-9-]'
    27→const safeRegexReplacements = [
    33→const makeSafeRegex = (value) => {
    42→const createToken = (name, value, isGlobal) => {
map.js
preload.js
ranges/gtr.js
     5→const gtr = (version, range, options) => outside(version, range, '>', options)
ranges/intersects.js
     4→const intersects = (r1, r2, options) => {
ranges/ltr.js
     5→const ltr = (version, range, options) => outside(version, range, '<', options)
ranges/max-satisfying.js
     6→const maxSatisfying = (versions, range, options) => {
ranges/min-satisfying.js
     5→const minSatisfying = (versions, range, options) => {
ranges/min-version.js
     7→const minVersion = (range, loose) => {
ranges/outside.js
    13→const outside = (version, range, hilo, options) => {
ranges/simplify.js
ranges/subset.js
    45→const subset = (sub, dom, options = {}) => {
    73→const minimumVersionWithPreRelease = [new Comparator('>=0.0.0-0')]
    74→const minimumVersion = [new Comparator('>=0.0.0')]
    76→const simpleSubset = (sub, dom, options) => {
   226→const higherGT = (a, b, options) => {
   238→const lowerLT = (a, b, options) => {
ranges/to-comparators.js
     6→const toComparators = (range, options) =>
ranges/valid.js
     4→const validRange = (range, options) => {
